@@ -105,6 +105,8 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
     - deduplicate.sh: add missed local variable declaration.
     - deduplicate.sh: new function for parsing otool's output and printing
       library dependencies if no error occurred.
+    - deduplicate.sh: non-functional: change WARNING to ERROR in error
+      messages.
 
   [ Oleksandr Shneyder ]
   * New upstream release (4.0.5.1):
